GPD files combined according to their name pattern; Files with different names will be placed in separate panes;